--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Module"></activity>
+        <activity android:name=".Options"></activity>
+        <activity android:name=".Module" />
         <activity android:name=".Settings" />
         <activity android:name=".MainActivity">
             <intent-filter>
