--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:resizeableActivity="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".Options"></activity>
-        <activity android:name=".Module" />
-        <activity android:name=".Settings" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".Splashpage"
+            android:theme="@style/splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".DictionaryBottomSheet" />
+        <activity android:name=".Options" />
+        <activity android:name=".Module" />
+        <activity android:name=".Settings" />
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
